--- a/java-core-tutorials/pom.xml
+++ b/java-core-tutorials/pom.xml
@@ -7,6 +7,15 @@
     <groupId>java-core-tutorials</groupId>
     <artifactId>java-core-tutorials</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.2.121</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
